# BioSeq-Project3

./: .gitignore  CMakeLists.txt  README.md  a.out  experiment1.sh  experiment2.sh  experiment3.sh  make.sh  plot_ratio.R  sp_exact_3.sh  test
config/: score.cfg
fasta-for-presentation/brca-full/: approx_out.txt
fasta-for-presentation/brca1-3/: approx_out.txt  opt_out.txt
fasta-for-presentation/brca1-4/: approx_out.txt
fasta-for-presentation/brca1-5/: approx_out.txt
fasta-for-presentation/brca1-6/: approx_out.txt
input/: brca1-testseqs.fasta  testdata_long.txt  testdata_short.txt  testseqs_10_3.fasta
src/: .Parser.h.kate-swp  MSA.h  Parser.cpp  Parser.h  SP_APPROX.cpp  SP_APPROX.h  SP_EXACT_3.cpp  SP_EXACT_3.h  main.cpp
